--- a/src/ListItem.css
+++ b/src/ListItem.css
@@ -76,20 +76,18 @@
 }
 .body-list-item {
   background-color: #fff;
-  padding: 10px;
-  height: 360px;
+  height: auto;
   font-size: 1.125rem;
   line-height: 1.75rem;
-  border-radius: 8px;
+  border: solid 1px transparent;
 }
 .body-list-item-img {
-  width: 100%;
-  border-radius: 8px;
-  height: 40%;
+  max-width: 100%; /* Đảm bảo ảnh không bị tràn ra khỏi phần tử cha */
+  height: auto;
 }
 .price-item {
   display: flex;
-  padding: 5px;
+  padding-left: 5px;
   color: #dc2626;
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -99,13 +97,20 @@
   display: flex;
 }
 .infor-nick-item {
-  margin-top: 10px;
+  padding: 10px;
   border-top: 1px dashed rgb(172, 174, 177); /* Viền nét đứt ở phía trên */
-  border-bottom: 1px dashed rgb(172, 174, 177);
 }
 .description-item {
-  margin-top: 10px;
+padding: 4px;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(239, 68, 68);
+  text-transform: uppercase;
+  font-weight: 600;
+  padding-left: .75rem;
+    padding-right: .75rem;
+    color: #fff;
 }
 .description-item-icon {
   color: #dc2626;
@@ -273,4 +278,41 @@ input:focus {
 .custom-select select:focus {
   outline: none; /* Loại bỏ viền màu khi chọn */
   border-color: #dc2626; /* Màu viền khi chọn */
+}
+.sale-price-item {
+  text-decoration-line: line-through;
+  font-size: smaller;
+  padding-left: 10px;
+  color: rgb(113, 113, 122);
+}
+.flex-sale-price-item > span {
+  text-decoration-line: none !important;
+  color: #dc2626;
+  font-size: x-small;
+  font-weight: 600;
+  font-size: 80%;
+  margin-left: .25rem;
+}
+.flex-sale-price-item{
+  display: flex;
+}
+.id-and-sale-price-item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.id-item {
+  font-size: .75rem;
+  
+  font-weight: 700;
+  line-height: 1rem;
+  padding-bottom: .125rem;
+    padding-top: .125rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    background-color: #dc2626;
+    border-radius: .25rem;
+    color: #fff;
+    margin-right: 5px;
+    padding: 6px;
 }
