--- a/src/App.css
+++ b/src/App.css
@@ -1303,6 +1303,11 @@ strong > span {
   color: #dc2626;
   font-weight: 600;
 }
+.flex-background-content-avatar:hover .id-qr-decription {
+  color: #fff; /* Hoặc bất kỳ thuộc tính CSS nào bạn muốn thay đổi */
+}
+
+
 .swap-money{
   display: flex;
   justify-content: space-around;
@@ -1383,6 +1388,7 @@ strong > span {
   padding-left: 20px;
   background-color: #fff;
   color: rgb(63, 63, 70);
+  cursor: pointer;
 }
 .flex-background-content-avatar > div {
   margin-left: 10px;
@@ -1445,4 +1451,9 @@ strong > span {
 }
 .input-customer:focus {
   border: solid 1px #dc2626;
+}
+
+.flex-background-content-avatar:hover {
+  background-color: #dc2626;
+  color: #fff;
 }
